--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title:        Project or Site name
 tagline:      A responsive theme for your project on GitHub Pages
 baseurl:      ""
 paginate:     1
+include:      ["_pages"]
+permalink:    /:title/
 
 # About/contact
 author:
