--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:        Project or Site name
+title:        José Del Valle
 tagline:      A responsive theme for your project on GitHub Pages
 baseurl:      ""
 paginate:     1
@@ -8,8 +8,8 @@ permalink:    /:title/
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       José Del Valle
+  url:        http://dlvx.github.io
 
 # Gems
 gems:
